--- a/setup-docker.yml
+++ b/setup-docker.yml
@@ -2,7 +2,7 @@
 - hosts: dev
   become: True
   tasks:
-    - name: Install python pip
+    - name: Install python and pip
       yum:
         name: python-pip
         state: present
