--- a/setup-docker.yml
+++ b/setup-docker.yml
@@ -1,21 +1,46 @@
 ---
 - hosts: dev
   become: True
-  tasks:
-    - name: Install python and pip
-      apt:
-        name: python-pip
+#  tasks:
+#    - name: Install python and pip
+#      apt:
+#        name: python-pip
+#        state: present
+#    - name: Install docker
+#      apt:
+#        name: docker
+#        state: present
+#    - name: start docker
+#      service:
+#        name: docker
+#        state: started
+#        enabled: yes
+#    - name: Install docker-py python module
+#      pip:
+#        name: docker-py
+#3        state: present
+
+tasks:
+    - name: Install aptitude using apt
+      apt: name=aptitude state=latest update_cache=yes force_apt_get=yes
+
+    - name: Install required system packages
+      apt: name={{ item }} state=latest update_cache=yes
+      loop: [ 'apt-transport-https', 'ca-certificates', 'curl', 'software-properties-common', 'python3-pip', 'virtualenv', 'python3-setuptools']
+
+    - name: Add Docker GPG apt Key
+      apt_key:
+        url: https://download.docker.com/linux/ubuntu/gpg
         state: present
-    - name: Install docker
-      apt:
-        name: docker
+
+    - name: Add Docker Repository
+      apt_repository:
+        repo: deb https://download.docker.com/linux/ubuntu bionic stable
         state: present
-    - name: start docker
-      service:
-        name: docker
-        state: started
-        enabled: yes
-    - name: Install docker-py python module
+
+    - name: Update apt and install docker-ce
+      apt: update_cache=yes name=docker-ce state=latest
+
+    - name: Install Docker Module for Python
       pip:
-        name: docker-py
-        state: present
+        name: docker
