--- a/setup-docker.yml
+++ b/setup-docker.yml
@@ -45,6 +45,6 @@
       pip:
         name: docker
         
-    - name: This command will change the working directory to somedir/
+    - name: This command will run usermod
       ansible.builtin.shell:
         cmd: usermod -a -G docker azureuser
